semântica de tabelas maiores

--- a/HTML-CSS-Módulo2/exercícios/ex023/tabela001.html
+++ b/HTML-CSS-Módulo2/exercícios/ex023/tabela001.html
@@ -27,10 +27,10 @@
 <body>
     <h1>Minha primeira tabela</h1>
     <!-- Hierarquia de tableas simples
-        Table (Tabela)
-            - Table Row (linha de tablea)
-                - Table Header (Cabeçalho de tabela)
-                - Table data (Dado de tabela)-->
+        TABLE (Tabela)
+            - TABLE ROW (linha de tablea)
+                - TABLE HEADER (Cabeçalho de tabela)
+                - TABLE DATA (Dado de tabela)-->
     <table>
         <tr> <!--Primeira linha-->
             <td>A1</td>
