--- a/HTML-CSS-Módulo2/exercícios/ex023/tabela002.html
+++ b/HTML-CSS-Módulo2/exercícios/ex023/tabela002.html
@@ -25,6 +25,10 @@
             color: white;
         }
 
+        tbody > tr:nth-child(even){ /* Efeito zebrado odd(par) ou even(ímpar) ou 2n = de duas em duas linhas */
+            background-color: lightgray;
+        }
+
         caption{
             font-size: 1.5em;
             font-weight: bold;
